--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>ReactJS Basics</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
+    <div id="app">
+
+    </div>
     <script type="text/javascript" src="app/bundle.js"></script>
-    <h1>Welcome :)</h1>
   </body>
 </html>
